<resources>
    <string name="app_name">Gemmary Jewelry Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="gemmaryGallery">Gemmary Gallery</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="gemmary_tagline">Pawnshop and Jewellery</string>
    <string name="signin_title">SIGN IN</string>
    <string name="forgot_pword_title">Forgot Password?</string>
    <string name="register_title">REGISTER</string>

    <string name="hint"><font size="12">Please select your preferred Gemmary Branch</font></string>



    <!--TODO: GOLD PROPERTIES : STRING[] -->

    <string-array name="item_type">
        <item>Anklet</item>
        <item>Bracelet</item>
        <item>Earring</item>
        <item>Goldsmith</item>
        <item>Necklace</item>
        <item>Pendant</item>
        <item>Ring</item>
        <item>Set</item>
    </string-array>


    <string-array name="gold_type">
        <item>Yellow Gold</item>
        <item>White Gold</item>
    </string-array>

    <string-array name="gold_karat">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="gold_quality">
        <item>BN - Brand New</item>
        <item>SU - Slightly Used</item>
        <item>GS - Gold Smith</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reserve_title">Reserve</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Duis condimentum malesuada purus eget tincidunt.
        Mauris augue est, imperdiet non iaculis vitae, imperdiet ac odio.
        Cras vitae leo sed neque blandit porttitor sed vel ante.
        Nullam efficitur sem ipsum, non pretium felis ultrices nec.
        Vestibulum nibh turpis, pretium vel libero eu, blandit maximus massa.
        Vivamus congue ligula id nisl cursus, ac sodales sem viverra.
        Suspendisse nec sollicitudin neque.
    </string>


    <string name="action_filter">Filter</string>
    <string name="item_type_title">Item Type: </string>
    <string name="gold_type_title">Gold Type: </string>
    <string name="gold_karat_title">Gold Karat: </string>
    <string name="gold_quality_title">Gold Quality: </string>

    <!--LOREM

        Donec consequat varius purus sit amet ullamcorper.
        Nullam fermentum magna vitae lorem laoreet accumsan.
        Quisque non nisl pellentesque eros venenatis finibus.
        Fusce faucibus, ante eget tempus maximus, elit augue condimentum ante,
        vitae sollicitudin nunc libero vel metus.

        Praesent euismod gravida sollicitudin.
        Etiam eu ex et lectus molestie tincidunt.
        Integer mauris purus, interdum ac lorem ac, lobortis iaculis felis.
        Nullam ac turpis sed lectus blandit interdum sed ac ipsum.
        Cras sollicitudin felis id nisl congue pharetra.
        Sed quis dolor molestie, placerat turpis id, euismod turpis.
        Curabitur quis luctus sapien. Nam vel laoreet augue, at blandit leo.
        Sed ultrices nulla lobortis augue convallis, blandit dapibus diam ultrices.
        In eu quam sit amet turpis luctus molestie.
        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
        Sed ac sagittis dolor. Integer luctus convallis sagittis.
        Proin odio ante, pharetra sed imperdiet eget, elementum quis urna.
        Morbi eget aliquet diam.

        -->

</resources>
