<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginScreen"
    tools:showIn="@layout/activity_login_screen"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:layout_gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimaryDark"
        android:alpha="90">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:src="@drawable/gemmary_paj3"
            android:paddingTop="15dp"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="35dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:background="@drawable/button_background">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/email_title"
                android:textCursorDrawable="@color/clouds"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="3dp"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPword"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_title"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="3dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:background="@drawable/button_background"
            android:text="@string/register_title"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="Registration"/>

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:background="@drawable/button_background"
            android:text="@string/signin_title"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="Login"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_pword_title"
        android:textColor="@color/clouds"/>


</LinearLayout>